--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 body, html {
     margin: 0;
     padding: 0;
@@ -8,6 +10,7 @@ body, html {
     position: relative;
     height: 100vh;
     overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.29);
 }
 
 #background-video {
@@ -21,20 +24,35 @@ body, html {
     z-index: -1;
 }
 
-.content {
+.title-content {
     position: relative;
     z-index: 1;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
-    font-family: Arial, sans-serif;
-    padding-top: 20vh;
-}
-
-h1 {
-    font-size: 3em;
+    padding-top: 40vh;
     margin: 0;
+    font-family: "Josefin Sans";
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
-p {
-    font-size: 1.5em;
+.title {
+    font-size: 5em;
+    font-weight: 700;
+}
+
+.info {
+    font-size: 1.6em;
+    font-weight: 400;
+    text-decoration: underline;
+    text-underline-offset: 12px;
+}
+
+a:visited {
+    text-decoration: underline;
+    color: white;
+}
+
+a:active {
+    text-decoration: none;
+    color: rgb(191, 191, 191);
 }
