--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -35,6 +35,25 @@ h1 {
     margin: 0;
 }
 
+
+
 p {
     font-size: 1.5em;
+}
+
+
+/* För att styra hur länkarna och text i footer ska se ut på alla sidor.
+ */
+footer ul.cookies {
+    list-style-type: none; /* attributet "none" ta bort HTML-kulor */
+    float: right;
+    padding-right: 1em;
+    padding-bottom: 0.2em;
+}
+
+footer ul.copyright {
+    list-style-type: none; /* attributet "none" ta bort HTML-kulor */
+    float: left;
+    padding-left: 1em;
+    padding-bottom: 0.2em;
 }
