--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -99,3 +99,71 @@ p {
 .menu li a:hover {
     color: gray; 
 }
+footer {
+    background-color: #333;
+    color: white;
+    padding: 40px 0;
+    text-align: center;
+}
+
+.footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.footer-logo img {
+    width: 800px;
+    margin-bottom: 20px;
+}
+
+.footer-hours, .footer-links, .footer-social {
+    max-width: 200px;
+    text-align: left;
+}
+
+.footer-hours h3, .footer-links h3, .footer-social h3 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+}
+
+.footer-hours p, .footer-links a {
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+}
+
+.footer-links a {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.footer-links a:hover {
+    color: #ccc;
+}
+
+.footer-social a {
+    margin-right: 10px;
+}
+
+.footer-social img {
+    width: 40px;
+}
+
+.footer-social a:hover img {
+    opacity: 0.8;
+}
+
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer-logo img, .footer-social img {
+        margin-bottom: 20px;
+    }
+}
