--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 body, html {
     margin: 0;
     padding: 0;
@@ -8,6 +10,7 @@ body, html {
     position: relative;
     height: 100vh;
     overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.29);
 }
 
 #background-video {
@@ -21,39 +24,173 @@ body, html {
     z-index: -1;
 }
 
-.content {
+.title-content {
     position: relative;
     z-index: 1;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
-    font-family: Arial, sans-serif;
-    padding-top: 20vh;
-}
-
-h1 {
-    font-size: 3em;
+    padding-top: 40vh;
     margin: 0;
+    font-family: "Josefin Sans";
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
+.title {
+    font-size: 5em;
+    font-weight: 700;
+}
 
+.info {
+    font-size: 1.6em;
+    font-weight: 400;
+    text-decoration: underline;
+    text-underline-offset: 12px;
+}
 
+a:visited {
+    text-decoration: underline;
+    color: white;
+}
+
+a:active {
+    text-decoration: none;
+    color: rgb(191, 191, 191);}
 p {
     font-size: 1.5em;
 }
 
-
-/* För att styra hur länkarna och text i footer ska se ut på alla sidor.
- */
-footer ul.cookies {
-    list-style-type: none; /* attributet "none" ta bort HTML-kulor */
-    float: right;
-    padding-right: 1em;
-    padding-bottom: 0.2em;
+.top-nav {
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    font-family: "Roboto", sans-serif;
+    display: flex;
+    align-items: center; 
+    justify-content: space-between;
+    z-index: 1000;
+    position: fixed;
+    background-color: rgba(9, 20, 46, 0.7);
+    color: white;
+    padding: 1em;
+    width: 100%;
 }
 
-footer ul.copyright {
-    list-style-type: none; /* attributet "none" ta bort HTML-kulor */
-    float: left;
-    padding-left: 1em;
-    padding-bottom: 0.2em;
+.menu {
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.menu li {
+    margin: 0 3em; 
+}
+
+.menu li a {
+    color: rgb(248, 245, 245);
+    text-decoration: none;
+    padding: 0.5em;
+    transition: background-color 0.3s;
+    cursor: pointer;
+
+}
+
+.menu li a:hover {
+    color: gray; 
+}
+footer {
+    background-color: #333;
+    color: white;
+    padding: 40px 0;
+    text-align: center;
+}
+
+.footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.footer-logo img {
+    width: 800px;
+    margin-bottom: 20px;
+}
+
+.footer-hours, .footer-links, .footer-social {
+    max-width: 200px;
+    text-align: left;
+}
+
+.footer-hours h3, .footer-links h3, .footer-social h3 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+}
+
+.footer-hours p, .footer-links a {
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+}
+
+.footer-links a {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.footer-links a:hover {
+    color: #ccc;
+}
+
+.footer-social a {
+    margin-right: 10px;
+}
+
+.footer-social img {
+    width: 40px;
+}
+
+.footer-social a:hover img {
+    opacity: 0.8;
+}
+
+/* Footer-Upphövsrätt*/
+
+hr.line {
+    width: 82%;
+    border: 0.0001em ridge rgb(85, 83, 83);
+}
+
+.footer-container-legal {
+    display: flex;
+    flex-wrap: wrap;
+    font-family: Arial;
+    font-size: 0.5em;
+    justify-content: center;
+    align-items: center;
+    gap: 60%;
+}
+
+.footer-container-legal a{
+    color: rgb(248, 245, 245);
+    text-decoration: none;
+}
+
+
+.footer-cookies a:hover {
+    color: rgb(128, 128, 128);
+    text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer-logo img, .footer-social img {
+        margin-bottom: 20px;
+    }
 }
