--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -155,21 +155,24 @@ footer {
     background-color: #004d00;
 }
 
+footer {
+    background-color:rgba(9, 20, 46, 0.7);
+    color: white;
+    padding: 40px 0;
+    text-align: center;
+}
 
-
-    
 .footer-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 40px;
+    align-items: flex-start; 
+    gap: 100px; 
 }
-
 .footer-logo img {
-    width: 800px;
+    width: 500px;
     margin-bottom: 20px;
 }
+
 
 .footer-hours, .footer-links, .footer-social {
     max-width: 200px;
@@ -178,7 +181,7 @@ footer {
 
 .footer-hours h3, .footer-links h3, .footer-social h3 {
     font-size: 1.2rem;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .footer-hours p, .footer-links a {
@@ -207,6 +210,9 @@ footer {
 .footer-social a:hover img {
     opacity: 0.8;
 }
+
+    
+
 
 /* Footer-Upphövsrätt*/
 hr.line {
