--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -251,4 +251,57 @@ hr.line {
     .footer-logo img, .footer-social img {
         margin-bottom: 20px;
     }
+
+/* Emilias CSS kod för nyhetssidan */
+
+button {
+    background-color: #004600;
+    color: white;
+    font-size: x-large;
+    margin: 30px;
+    padding: 10px;
+    border-color: white;
+    border-radius: 8px;
+    box-shadow: 5px 5px 7px #adb2b9, -5px -5px 7px white;
+    
 }
+
+button:hover {
+    box-shadow: none;
+    cursor: pointer;
+    
+}
+
+.newssite {
+    margin-left: 60px;
+    padding: 2em;
+}
+
+.image-links {
+    text-align: center;
+}
+
+figure {
+
+    margin:25px;
+    padding: 25px;
+    display:inline-block;
+}
+
+figcaption {
+    position: relative;
+    font-weight:bold;
+    margin-bottom: 6px;
+}
+
+img {
+    border-radius: 10px;
+    box-shadow: 5px 5px 7px #7b7d80, -5px -5px 7px white;
+    
+}
+
+img:hover {
+    box-shadow: none;
+}
+
+/*Här slutar Emilias kod för nyhetssidan*/
