--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -251,7 +251,7 @@ hr.line {
     .footer-logo img, .footer-social img {
         margin-bottom: 20px;
     }
-
+}
 /* Emilias CSS kod för nyhetssidan */
 
 button {
