--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -337,7 +337,7 @@ figcaption {
     width: 300px;
     height: 300px;
     box-shadow: none;
-    margin: 350px 200px;
+    margin: 300px 200px 100px 0;
     display: flex;
     float: right;
     display: inline;
@@ -348,7 +348,7 @@ figcaption {
         margin: 100px 200px;
     }
     to {
-        margin: 350px 200px;
+        margin: 300px 200px 0 0;
     }
 }
 
@@ -363,7 +363,7 @@ figcaption {
     width: 300px;
     height: 300px;
     box-shadow: none;
-    margin: 100px 200px;
+    margin: 100px 200px 100px 200px;
     display: flex;
     float: right;
     display: inline;
@@ -374,7 +374,7 @@ figcaption {
         margin: 350px 200px;
     }
     to {
-        margin: 100px 200px;
+        margin: 100px 200px 0 0;
     }
 }
 
@@ -394,5 +394,21 @@ figcaption {
         opacity:1;
     }
 }
+.background-medlem {
+    background-image: url("golf-hotel-4538057_1280.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+.background-kontaktobokning {
+    background-image: url("golf-hotel-4538057_1280.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    background-color: dodgerblue;
+    opacity: 0.3;
 
 /* Slut Emelies css kod för design*/
