--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -306,8 +306,8 @@ figcaption {
 
 /*Här slutar Emilias kod för nyhetssidan*/
 
-    /* Emelies css för designen på om oss, bokning, medlem */
-
+/* Emelies css */
+/*Bakgrund på "Om Oss" */
 .background-div {
     background-image: url("golf-2217600_1280.jpg");
     background-position: center;
@@ -319,7 +319,7 @@ figcaption {
     align-items: center;
     /* justify-content: center; */
   }
-
+/* Text rutan på om oss*/
   .text-container {
     height: 400px;
     width: 1000px;
@@ -332,7 +332,7 @@ figcaption {
     margin: 20px;
     background-image: linear-gradient(to right, rgb(255,255,255,1 ), rgb(255, 255, 255,0));
   }
-
+/* Bilden som rör sig om man ska logga in/Bli medlem */
 #bild-bli-medlem {
     width: 300px;
     height: 300px;
@@ -351,14 +351,14 @@ figcaption {
         margin: 300px 200px 0 0;
     }
 }
-
+/* "Medlemsförmåner" */
 .text-medlem {
    text-align: left;
     float: left;
     margin: 50px 50px;
     display: inline-block;
 }
-
+/* Bilden som rör sig när man är inne på bli medlem*/
 #bild-bli-medlem2 {
     width: 300px;
     height: 300px;
@@ -377,7 +377,7 @@ figcaption {
         margin: 100px 200px 0 0;
     }
 }
-
+/* Runda bilden som fadear fram */
 #bakgrundbokning {
     border-radius: 50%;
     width: 500px;   
@@ -394,13 +394,15 @@ figcaption {
         opacity:1;
     }
 }
-.background-medlem {
+/* .background-medlem {
     background-image: url("golf-hotel-4538057_1280.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
+    height: 100%; } */
+
+/* Bakgrunds bild på Bokning och Kontakt */
 .background-kontaktobokning {
     background-image: url("golf-hotel-4538057_1280.png");
     background-position: center;
@@ -410,5 +412,15 @@ figcaption {
     height: 100%;
     background-color: dodgerblue;
     opacity: 0.3;
+}
+/* Bakgrundsbild på Bli medlem */
+  .background-div-medlem {
+    background-image: url("Namnlös14.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+  }
 
 /* Slut Emelies css kod för design*/
