--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -39,8 +39,10 @@ p {
     font-size: 1.5em;
 }
 
+/***********Adinas kod************/
+
+
 .top-nav {
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     font-family: "Roboto", sans-serif;
     display: flex;
     align-items: center; 
@@ -65,9 +67,46 @@ p {
 
 .menu li {
     margin: 0 3em; 
+    position: relative;
+}
+
+.menu li:hover .dropdown {
+
+    display: block;
+}
+
+.menu a {
+    display: block;
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+    position: relative;
+}
+
+.menu::after {
+    content: "\25BC";
+    position: absolute;
+    top: 50%;
+    right: -15px;
+    transform: translateY(-50%);
+    display: none;
+}
+
+.menu a::after {
+    content: "";
+    border: solid transparent;
+    border-width: 5px 5px 0 5px;
+    border-top-color: white;
+    position: absolute;
+    top: 50%;
+    right: -15px;
+    transform: translateY(-50%);
+    display: none;
 }
 
 .menu li a {
+    display: block;
     color: rgb(248, 245, 245);
     text-decoration: none;
     padding: 0.5em;
@@ -76,6 +115,50 @@ p {
 
 }
 
-.menu li a:hover {
-    color: gray; 
+
+.menu li:hover > a::after {
+    display: inline;
 }
+.menu li a:hover {
+    color: grey;
+}
+
+.dropdown {
+
+    display:none;
+    position: absolute;
+    top: calc(100% + 10px); 
+    left: 0;
+    background-color: rgba(9, 20, 46, 0.7);
+    letter-spacing: space-between;
+    list-style-type: none;
+    padding: 10px 0 0;
+    margin: 0;
+    width: 200px;
+}
+
+.dropdown li {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+
+.dropdown li a {
+    padding: 10px;
+    text-align: left;
+    color: white;
+    text-decoration: none;
+
+}
+
+
+.dropdown li a:hover {
+background-color: rgba(9, 20, 46, 0.7);
+
+}
+
+.menu li:hover .dropdown {
+    display: block;
+}
+
+/***********Här slutar Adinas kod************/
