--- a/golfklubb-style.css
+++ b/golfklubb-style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/*Tillagt av Adina, flyttade upp URL till toppen då det stod att den inte är giltig att ha nere i top-nav*/
+
 body, html {
     margin: 0;
     padding: 0;
