--- a/kod-css/medlem.css
+++ b/kod-css/medlem.css
@@ -5,43 +5,231 @@ body, html {
     font-family: 'Josefin Sans', sans-serif;
 }
 
+/*Adinas kod*/
+
 .top-nav {
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 0.1em;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: center; 
+    justify-content: space-between;
+    z-index: 1000;
+    position: fixed;
     background-color: rgba(9, 20, 46, 0.7);
     color: white;
     padding: 1em;
-    position: fixed;
-    top: 0;
     width: 100%;
-    z-index: 1000;
 }
 
 .menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
+    flex-direction: row; 
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .menu li {
-    margin: 0 1.5em;
+    margin: 0 3em; 
+    position: relative;
+}
+
+.menu > li:hover > a::after {
+    display: inline;
+}
+
+/* Gemensam stil för alla dropdown-menyer */
+.dropdown-spela,
+.dropdown,
+.dropdown-medlem {
+    display: none; 
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(9, 20, 46, 0.7);
+    list-style-type: none;
+    padding: 1px 0;
+    margin: 0;
+    width: 200px; 
+}
+
+/* Länkar i dropdown-menyer */
+.dropdown-spela li,
+.dropdown li,
+.dropdown-medlem li {
+    margin-bottom: 5px; /* Avstånd mellan länkar */
+    margin-top: 5px;
+    text-align: left;
+}
+
+.dropdown-spela li a,
+.dropdown li a,
+.dropdown-medlem li a {
+    padding: 0; 
+    color: white;
+    text-decoration: none;
+    display: block; 
+    text-align: left; 
+}
+
+
+.dropdown-medlem li a {
+    padding: 0px 0; 
+}
+
+.dropdown-spela li a::after,
+.dropdown li a::after,
+.dropdown-medlem li a::after {
+    content: none;
+}
+
+.menu li:hover .dropdown-spela,
+.menu li:hover .dropdown,
+.menu li:hover .dropdown-medlem {
+    display: block; 
+    color: rgb(153, 147, 147);
+}
+/* Menyinställningar */
+.menu a {
+    display: block;
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center; 
+    position: relative;
+}
+
+.menu a::after {
+    content: "";
+    border: solid transparent;
+    border-width: 5px 5px 0 5px;
+    border-top-color: white;
+    position: absolute;
+    top: 50%;
+    right: -15px;
+    transform: translateY(-50%);
+    display: none;
 }
 
 .menu li a {
-    color: white;
+    display: block;
+    color: rgb(248, 245, 245);
     text-decoration: none;
-    transition: color 0.3s;
+    padding: 0.5em;
+    transition: background-color 0.3s;
+    cursor: pointer;
+}
+
+.menu li:hover > a::after {
+    display: inline;
 }
 
 .menu li a:hover {
-    color: gray;
+    color: grey;
+}
+
+.menu li:hover > .dropdown {
+    display: block;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(9, 20, 46, 0.7);
+    list-style-type: none;
+    padding: 10px 0 0;
+    margin: 0;
+    width: 200px;
+}
+
+.dropdown li {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.dropdown li a {
+    padding: 10px;
+    text-align: left;
+    color: white;
+    text-decoration: none;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(9, 20, 46, 0.7);
+    list-style-type: none;
+    padding: 10px 0 0;
+    margin: 0;
+    width: 200px;
+}
+
+.dropdown li {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.dropdown li a {
+    padding: 10px;
+    text-align: left;
+    color: white;
+    text-decoration: none;
+}
+
+.dropdown li a:hover {
+    background-color: rgba(9, 20, 46, 0.7);
+}
+
+/* Medlems dropdown */
+.dropdown-medlem {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(9, 20, 46, 0.7);
+    list-style-type: none;
+    padding: 10px 0;
+    margin: 0;
+    width: 200px;
+}
+
+.dropdown-medlem li {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.dropdown-medlem li a {
+    padding: 10px;
+    text-align: left;
+    color: white;
+    text-decoration: none;
+}
+
+.dropdown-medlem li a:hover {
+    background-color: rgba(9, 20, 46, 0.7);
 }
 
 
+.menu li:hover .dropdown-medlem {
+    display: block;
+}
+
+/* Spela dropdown */
+.menu li:hover .dropdown-spela {
+    display: block;
+}
+
+/*Här slutar Adinas kod*/
+
+
 .background-div-medlem, .register-background {
-    background-image: url('medlem.jpg'); 
+    background-image: url('medlem.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
