--- a/kod-css/medlem.css
+++ b/kod-css/medlem.css
@@ -229,7 +229,7 @@ body, html {
 
 
 .background-div-medlem, .register-background {
-    background-image: url('medlem.jpg');
+    background-image: url('/bilder/medlem.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
