--- a/kod-css/visiontest2.css
+++ b/kod-css/visiontest2.css
@@ -227,7 +227,7 @@ html, body {
 }
 
 .background-div2 {
-    background-image: url("golf-2217600_1280.jpg");
+    background-image: url(/bilder/golf-2217600_1280.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -333,7 +333,47 @@ html, body {
     padding: 1rem;
 }
 
-@media (max-width: 1235px) {
+@media screen and (max-width:768px) {
+
+    .meny-höger-sida-omoss {
+        font-family: "Josefin Sans";
+        line-height: 25px;
+        margin-top: 10%;
+        margin-bottom: 0;
+        display: flex;
+        flex-direction: column;
+        color:#fff;
+        list-style: none;
+        float: left;
+        margin-top: 40%;
+    }
+    
+
+    .link-omoss a{
+        color: rgb(9, 20, 46);
+    }
+
+    .link-omoss a:visited {
+        color: rgb(9, 20, 46);
+    }
+    
+    /* .meny-höger-sida-omoss  */ 
+    .link-omoss a:hover {
+        margin: 2%;
+        text-decoration: none;
+}
+
+.anchor-links-vision-ul {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    line-height: 20px;
+}
+.historia {
+    width: 80%;
+}
+
+/* @media (max-width: 1235px) {
 .background-div {
         align-content: center;
     }
@@ -356,7 +396,7 @@ html, body {
     .text1, .text2 {
         width: 100%;
      
-    }
+    } */
 }
 footer {
     background-color:rgba(9, 20, 46, 0.7);
