--- a/kod-css/restaurang.css
+++ b/kod-css/restaurang.css
@@ -54,7 +54,7 @@ justify-content: space-evenly;
     width: 100%;
     height: auto;
     margin-bottom: 0;
-    margin-top: 100vh;
+    margin-top: 30px;
 }
 
 #kontaktaosstext {
@@ -96,8 +96,8 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
-
     margin: auto;
+    margin-bottom: 30px;
 }
  
 h1 {
@@ -137,6 +137,71 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #218838;
 }
+
+/* RESTAURANGMENYN AV EMILIA */
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+   
+  .menu-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+   
+  .menu-content {
+    position: relative;
+    width: auto;
+    height: auto;
+    padding: 5rem;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-transform:uppercase;
+    font-size: small;
+    border: 12px dotted white;
+    border-style:double;
+    border-radius: 30px;
+    /*display: flex;
+    flex-direction: column;*/
+    background-color: black;
+    color: white;
+    margin-bottom: 30px;
+  }
+   
+  .menu-content h1 {
+    text-align: center;
+    color: white;
+  }
+   
+  .menu-content li{
+    padding: 4px;
+  }
+   
+  @media (max-width: 687px) {
+    .menu-wrapper {
+      width: auto;
+      height: auto;
+    }
+    .menu-content {
+      width: auto;
+      height: auto;
+      font-size: x-small;
+    }
+  }
+   
+  @media (max-width: 550px) {
+    .menu-wrapper {
+      width: auto;
+      height: auto;
+    }
+   
+    .menu-content {
+      font-size: xx-small;
+      padding: 5rem 0 5rem 0;
+    }
+    
+  }
+  /* SLUT RESTAURANGMENYN AV EMILIA */
 
 .footer {
     background-color: #28a745;
