--- a/kod-css/omoss.css
+++ b/kod-css/omoss.css
@@ -335,7 +335,7 @@ body {
     }
 
 .background-div-omoss {
-    background-image: url(/bilder/golf-2217600_1280.jpg);
+    background-image: url(/bilder/bakgrund.omoss.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
