Padding för "spela" submenyn

--- a/kod-css/golfklubb-style.css
+++ b/kod-css/golfklubb-style.css
@@ -783,7 +783,12 @@ hr.line {
         width: 100%;
     }
 
+
       /*Submeny*/
+
+      .hamburger-dropdown .dropdown-spela {
+        width: 250px; 
+    }
 
     .hamburger-dropdown .dropdown li,
     .dropdown-spela li,
