--- a/kod-css/produkt.css
+++ b/kod-css/produkt.css
@@ -128,11 +128,11 @@ h1 {
   color: rgb(255, 0, 0);
 }
 
-.footer {
+/*.footer {
   padding: 20px;
   text-align: center;
   background: #ddd;
-}
+}*/
 
 
 
@@ -346,19 +346,16 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: black !important;
-  font-size: 0.8em;
+  font-size: 0.55em;
+  font-family:'Montserrat';
+  
  
-}
-
-footer p {
-  margin: 0;
-  font-size: 0.9em;
 }
 
 
 .betalning {
     margin: 0;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 
 }
@@ -366,7 +363,7 @@ footer p {
     background-color: gray;
     display: flex;
     justify-content: center;
-    padding: 20px 0;
+    padding: 33px 0 33px 0;
 }
 .betalning ul {
     list-style-type: none;
